Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gtk gtk
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,430
    • Issues 1,430
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 242
    • Merge requests 242
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • gtkgtk
  • Issues
  • #1365

Closed
Open
Created Sep 27, 2018 by Takao Fujiwara@fujiwarat

imwayland should accept to commit a text after a preedit is updated

The original issues are https://bugzilla.redhat.com/show_bug.cgi?id=1632981 and https://bugzilla.redhat.com/show_bug.cgi?id=1632646

To reproduce:

  1. Focus on gnome-terminal in GNOME Wayland
  2. Enable ibus-hangul
  3. Type Shift-Space key to enable Hangul mode
  4. Type rrr

Actual result: ㄲ is not committed

Expected result: ㄲ is committed

ibus-hangul tries to hide the preedit of "ㄲ" before commits "ㄲ"

I.e. imwayland.c:text_input_preedit() is called and text_input_done() is called before text_input_commit() is called. text_input_done() calls commit_state() and global->serial is incremented. When text_input_commit() is called, the serial number is different and text_input_commit_apply() is failed.

If I change text_input_commit_apply(global, valid) to text_input_commit_apply(global, TRUE), this issue does not happen.

I don't know which case global->serial should be incremented and which case should not.

Edited Sep 27, 2018 by Takao Fujiwara
Assignee
Assign to
Time tracking