imwayland: Delay state commits during .done

Mutter/IBus may send multiple done events with the same serial
in a burst with certain IM modules. This is a hack to make gtk+
deal better with it.

Make the IM module coalesce .commit requests as the result of a
.done event, the actual .commit is deferred to an idle with
slightly lesser priority than the event source, so we make sure
that all .done events will be handled in a row.

Closes: https://gitlab.gnome.org/GNOME/gtk/issues/1365